# helicopter_control

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/control/: CMakeLists.txt  actuator.c  actuator.h  control.c  control.h
lib/ins/: CMakeLists.txt  imu.c  imu.h  ins.c  ins.h  quat_test.h  us_sensor.c  us_sensor.h
lib/test_module/: test_module.cpp  test_module.h
lib/transmitter/: CMakeLists.txt  transmitter.cpp  transmitter.h
pico/: CMakeLists.txt
pico/lib/: CMakeLists.txt
pico/lib/control/: control.c
pico/lib/datalogger/: CMakeLists.txt  datalogger.c  datalogger.h
pico/lib/ins/: imu.c  ins.c
pico/lib/test_module/: CMakeLists.txt  test_module.cpp  test_module.h
pico/lib/transmitter/: CMakeLists.txt  transmitter.cpp  transmitter.h
pico/scripts/: launch.sh
pico/src/: CMakeLists.txt  main.cpp
remote/receiver/: receiver.h  receiver.ino
remote/src/: main.py  plotter.py
rf24_receiver/receiver/: receiver.h
rf24_receiver/scripts/: main.py
rf24_receiver/wirings/: circuit.cddx  netlist.txt
scripts/: launch.sh
src/: CMakeLists.txt  main.cpp
wemos_d1_mini/client/: client.h  client.ino
wemos_d1_mini/scripts/: server.py
wemos_d1_mini/server/: client.h  client.ino  server.h  server.ino
wemos_d1_mini/wirings/: circuit.cddx  netlist.txt
wirings/: circuit.cddx  netlist.txt
